# ARC_gym

./: Experiment.py  README.md  SampleGenerator.py  example.py  generate.py  pyproject.toml  requirements.txt  setup.cfg  test_grid_sampler.py
ARC_gym/: Hodel_primitives.py  MetaDGP.py  arc_evaluation_dataset.py  dataset.py  primitives.py
ARC_gym/grid_sampling/: distinct_colors.py  grid_sampler.py  object_grid_generation.py
ARC_gym/utils/: batching.py  graphs.py  heap_search_type_system.py  metrics.py  object_detector.py  seq_to_seq.py  tokenization.py  visualization.py
tasks/: Task.py
tasks/cardinality/: counting_tasks.py  task_list.py
utils/: file_utils.py  grid_utils.py  transformer_utils.py
