[metadata]
name = ARC_gym
version = 0.0.1
description = Data Generator for the Abstraction & Reasoning Corpus
url = https://github.com/SimonOuellette35/ARC_gym
description_file = README.md
author = Simon Ouellette
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ARC_gym
install_requires =
    setuptools
    numpy
python_requires = >=3.8
zip_safe = no